WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208532
[ macOS ] svg/custom/textPath-change-id-pattern.svg is flakey failing
https://bugs.webkit.org/show_bug.cgi?id=208532
Summary
[ macOS ] svg/custom/textPath-change-id-pattern.svg is flakey failing
Jacob Uphoff
Reported
2020-03-03 13:16:39 PST
svg/custom/textPath-change-id-pattern.svg This test has been flaky failing on macOS wk1 for Debug for all visible history for the test. I ran this test in iterations x5000 and did not reproduce the failure. History:
https://results.webkit.org/?suite=layout-tests&test=svg%2Fcustom%2FtextPath-change-id-pattern.svg
Diff: expected an image that said 'pass' but no image was present.
Attachments
Patch
(4.22 KB, patch)
2020-03-19 11:24 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Patch
(5.63 KB, patch)
2020-03-19 11:46 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Patch
(5.27 KB, patch)
2020-03-25 20:39 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-03-03 13:17:05 PST
<
rdar://problem/60010097
>
Jacob Uphoff
Comment 2
2020-03-03 13:20:35 PST
set expectations here:
https://trac.webkit.org/changeset/257798/webkit
Said Abou-Hallawa
Comment 3
2020-03-19 11:24:59 PDT
Created
attachment 393999
[details]
Patch
Said Abou-Hallawa
Comment 4
2020-03-19 11:46:50 PDT
Created
attachment 394001
[details]
Patch
Said Abou-Hallawa
Comment 5
2020-03-25 20:39:41 PDT
Created
attachment 394574
[details]
Patch
EWS
Comment 6
2020-03-25 21:28:45 PDT
Committed
r259031
: <
https://trac.webkit.org/changeset/259031
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 394574
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug